# presenze-meucci

./: README.md
src/backend/: .env.example  Cargo.toml  Dockerfile
src/backend/.sqlx/: query-027253b0085fcff2730d5635b22b566bee71aa7fc73dca0238c675d05546c428.json  query-1f13dfa0cd42a346d10400b2d6edef0637682f47abd3aaa4f032bc55fa1fae9d.json  query-282b7148dcc871f4e801f1447a1d131a5f21554f78ba2fe2edced69d353231d4.json  query-2c6883d679d188b6016789c85b0cfcfd8fc89c3d35a0ce810f3dd925fb303379.json  query-46c99bd3eca8369ceb9c28f13189e4623418bc42d89b84774137a8349b7874f9.json  query-520ea707bca5a335f7da238efe731ef32c1c972b44d6a79aa2444b0ff05bb226.json  query-533d9e59edb8054eabd463520408e1943e3bc7c29e4ee09b680d5f735038156c.json  query-5c012c255ad1c5e91f4bbafaa1e9e72f40b81a08c713b586b34797075d66b2a7.json  query-5dffb580339d2b249f3b65e441c227335c9254a6e6304ed1bbb975a75670bf32.json  query-60da55b6f5e1a9e205dcf6f37a79305b33d649d7461f81310c4961ba9e64b443.json  query-6f9ff45fa19ead494ef5a2b1263336b6d4bd22337d0e742b483625d004a48f11.json  query-775f25d6016de0f4f8e4668694fe4e7eb61ba812ab5758f8577dadeb8f447cc3.json  query-7a6a004b3edc12aad147ad15b29dfa9abe95e0b57a9c9349007fcb34596c9133.json  query-90402df6cbdea729b8066ad8e41e4cf0fc3b3d428ec57c455aed3b7b284f06eb.json  query-959dcb74752ecb34a39000227dcd90068bb45c6f8208c680b89703610878e39c.json  query-967116fae01bc06bd28cf265654e4a57f43490096d7bc5367d7e74b04ea434d7.json  query-a01908ddb04cbc908d0a6c92d751057b7c28f4476db68d5eb2cbdd71918bdab0.json  query-a4afd58b66f2b21f0db805258a192130a31b698841f8748485f60d75d11d974e.json  (+13 more)
(+159 files in other folders)
