[package]
name = "presenze_meucci"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"

[dependencies]
ahash = "0.8.12"
axum = { version = "0.8", features = ["http2", "macros"] }
axum-serde = { version = "0.9", features = ["sonic"] }
futures = "0.3.31"
serde = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "tls-rustls-aws-lc-rs"] }
tokio = { version = "1.47.1", features = ["full"] }
color-eyre = "0.6.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15.7"
utoipa = { version = "5.2", features = ["uuid", "chrono", "axum_extras", "auto_into_responses"] }
utoipa-axum = { version = "0.2" }
utoipa-scalar = { version = "0.3", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "compression-full", "decompression-full"] }
http = "1.3.1"
sonic-rs = "0.5.4"
tracing = "0.1.41"
tower-sessions-redis-store = "0.16.0"
thiserror = "2.0.16"
axum-login = "0.18.0"
password-auth = "1.0"
rustls = { version = "0.23.31", features = ["aws-lc-rs"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
quick-xml = { version = "0.38.3", features = ["serde", "tokio", "serialize"] }
clap = { version = "4.5.47", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
axum_thiserror = "0.1.0"

[profile.release]
lto = true
